Bug 160675 - UI: Sidebar doesn't show width and height (nor X/Y coordinates) of object depending on timing
Summary: UI: Sidebar doesn't show width and height (nor X/Y coordinates) of object dep...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.5.4.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords: bibisected, bisected, regression
: 160428 (view as bug list)
Depends on:
Blocks: Sidebar-Properties-PositionAndSize
  Show dependency treegraph
 
Reported: 2024-04-15 18:05 UTC by Telesto
Modified: 2025-05-26 00:29 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast (305.46 KB, image/gif)
2024-04-15 18:06 UTC, Telesto
Details
Sample (10.54 KB, application/vnd.oasis.opendocument.graphics)
2024-04-15 18:07 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2024-04-15 18:05:16 UTC
Description:
UI: Sidebar doesn't show width and height (nor X/Y coordinates) of object in certain context

Steps to Reproduce:
1. Open the attached file
2. Select the shape with red border (dimensions and position are shown in the sidebar)
3. Click somewhere in the white area
4. Select the shape again

Actual Results:
No coordinates nor size

Expected Results:
dimensions and position field are empty


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 748561425774fa40ab685fed80d113f7e8301158
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2024-04-15 18:06:39 UTC
Created attachment 193690 [details]
Screencast
Comment 2 Telesto 2024-04-15 18:07:11 UTC
Created attachment 193691 [details]
Sample
Comment 3 Telesto 2024-04-15 18:09:41 UTC
Also in
Version: 7.6.3.0.0+ (X86_64) / LibreOffice Community
Build ID: 35f19e5cb93ce218787904e99c2bedfd40e725cc
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded

fine in
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4bb730be0909d9cf55b7a44d7e916aa5de16b9f7
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 4 Armondo Lopez 2024-04-15 20:17:01 UTC
Thank you for submitting the bug. I wasn't able to reproduce the same behavior in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a2265e8faa099d9652efd12392c2877c2df1d1eb
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

but I was able to in

Version: 24.2.1.2 (X86_64) / LibreOffice Community
Build ID: db4def46b0453cc22e2d0305797cf981b68ef5ac
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 5 Robert Großkopf 2024-04-16 15:07:54 UTC
Could confirm the buggy behavior with

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bdf3b5ce49b0e4ee1b4525d344cfb037ef473059
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

(Daily build 2024-04-16)

No position is shown, no width and height were shown when entering the red border a second time.

This bug appears also in LO 7.5.5, won't appear in LO 7.4.7.2 on the same machine: OpenSUSE 15.6 64bit rpm Linux.

Haven't seen this very often. Might be there exists a bug …
Comment 6 Robert Großkopf 2024-04-16 15:11:58 UTC
Nearly the same, but with older versions:
https://bugs.documentfoundation.org/show_bug.cgi?id=146606
Comment 7 raal 2024-04-17 17:10:27 UTC
No repro with GTK3 plugin, but reproducible with gen on Linux.
Unfortunately my bibisect point to wrong source 85ccfd86e1bc3bbe2a9957cf3df069e2f7e85071
Comment 8 Telesto 2024-04-17 17:44:13 UTC
Bibiseced with win64-7.5 to:
tdf#153040 sw content controls PDF export: output listbox entry

This fixes a 7.5 regression/wrong implementation.

Prior to 7.5, content controls were just exported as plain text to PDF.
Now that the content control is exported, the selected entry in
the list box was not being printed - just a big hole in the text.

Fixed by informing PDF of the selected entry.

TODO: the content control starts too late
(a somewhat wide space at the front),
and ends too soon (the last portion of the text is cut off).

The unit test for the TODO will cover this case,
so skipping that for now since I found no examples to follow.

https://gerrit.libreoffice.org/c/core/+/152567

---
However I don't grasp how this commit (about PDF export) being connected to sidebar. However it does touch the same topic: list box being empty; rather similar to spinbox being empty
Comment 9 Telesto 2024-06-10 15:17:00 UTC
@stragu
Would you mind the recheck the bibisect result, to be sure. And well I have tendency increase the importance a bit. However I'm less slightly biased, because I ran into the problem today (and it's bugging me :-).
Comment 10 stragu 2024-06-11 01:47:13 UTC
(In reply to Telesto from comment #9)
> @stragu
> Would you mind the recheck the bibisect result, to be sure.
Indeed, I can't confirm that it started at 2c813b3745e2da2001d318a60d911107bfefc32c as you report in comment 8 (build [89c3572e790a4a1957045d00a2f7e7bf042bbb10] in linux-64-7.5, tested with gen VCL). 

I bibisected to the earlier build [d08fb5e37e9d4bc1867e8fb0410c3741b35a0ae1], which is:

commit 0d0841dc8faccc7d7d3d8d463916dd73a7c061a1
author	Caolán McNamara 	Thu May 11 16:03:57 2023 +0100
committer	Adolfo Jayme Barrientos 	Sun May 14 06:56:03 2023 +0200
tdf#155241 keep current MetricSpinButton value if unparseable junk input
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151617

The flakiness of previous bibisects is probably due to variations in timing. To reproduce it consistently, wait a couple of seconds between each step.
- at commit:
   * follow steps quickly: values visible
   * wait between each step: fields empty
- at commit~1: always visible

Caolán, can you please have a look?
Comment 11 stragu 2024-06-11 01:58:30 UTC
(The commit is said in bug 155241 comment 8 to have been reverted for bug 157168, but that was only the gtk3-specific part. Bug is still present in recent daily build.)
Comment 12 stragu 2024-06-11 02:00:40 UTC
*** Bug 160428 has been marked as a duplicate of this bug. ***
Comment 13 Caolán McNamara 2024-08-29 11:19:50 UTC
Looks like its the explicit blanking-out of the text in those spinbuttons when clicking on the background that's the problem. Clicking back on the shape sets the values, but they don't reformat when previous blanked
Comment 14 Commit Notification 2024-08-29 12:23:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/db92117fae3034dea59c8e589d93756406678427

Resolves: tdf#160675 reformat 'blanked' metricspinbutton after setting value

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Caolán McNamara 2024-08-29 12:25:22 UTC
done in trunk, backports to 24-8 and 24-2 in gerrit
Comment 16 Commit Notification 2024-08-30 19:40:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/cb778e1c693ba47616f016b42e0fe8fe8597f82e

Resolves: tdf#160675 reformat 'blanked' metricspinbutton after setting value

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2024-08-30 19:41:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/166c08906577150b45c399fe3c54230d81dfa0d9

Resolves: tdf#160675 reformat 'blanked' metricspinbutton after setting value

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.