Resolves: tdf#160675 reformat 'blanked' metricspinbutton after setting value

click on background, set_text sets a blank for the content of the metric
spin button, so explicitly reformat when a value is set afterwards.

Change-Id: Idac3f805bcf1baad1cdeaa3caa1c48a976f2f738
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172591
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins